# koto

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  com.github.joshstrobl.koto.json  jsc.cfg  meson.build
.github/: FUNDING.yml
KotoQt/data/: com.github.joshstrobl.koto.desktop
build-aux/meson/: postinstall.py
data/: com.github.joshstrobl.koto.appdata.xml.in  com.github.joshstrobl.koto.desktop.in  com.github.joshstrobl.koto.gschema.xml  meson.build  style.css
desktop/: CMakeLists.txt  example-config.toml  main.cpp
desktop/config/: config.cpp  config.hpp  library.cpp  library.hpp  ui_prefs.cpp  ui_prefs.hpp
desktop/datalake/: album.cpp  artist.cpp  cartographer.cpp  cartographer.hpp  database.cpp  database.hpp  indexer.cpp  indexer.hpp  models.cpp  structs.hpp  track.cpp  track.hpp
desktop/qml/: HomePage.qml  Main.qml  PrimaryNavigation.qml  Root.qml
desktop/qml/PlayerBar/: PlayerBar.qml
po/: POTFILES  meson.build
src/: koto-button.c  koto-button.h  koto-dialog-container.c  koto-dialog-container.h  koto-expander.c  koto-expander.h  koto-flipper-button.c  koto-flipper-button.h  koto-headerbar.c  koto-headerbar.h  koto-headerbar.ui  koto-nav.c  koto-nav.h  koto-paths.c  koto-paths.h  koto-playerbar.c  koto-playerbar.h  koto-track-item.c  koto-track-item.h  koto-utils.c  koto-utils.h  koto-window.c  koto-window.h  koto-window.ui  koto.gresource.xml  main.c  meson.build
src/components/: action-bar.c  action-bar.h  album-info.c  album-info.h  button.c  button.h  cover-art-button.c  cover-art-button.h  koto-action-bar.c  koto-action-bar.h  koto-cover-art-button.c  koto-cover-art-button.h  track-item.c  track-item.h  track-table.c  track-table.h
src/config/: config.c  config.h
src/db/: cartographer.c  cartographer.h  db.c  db.h  loaders.c  loaders.h
src/indexer/: album-playlist-funcs.h  album.c  album.h  artist-playlist-funcs.h  artist.c  artist.h  file-indexer.c  file-indexer.h  file.c  file.h  library.c  meson.build  misc-types.h  structs.h  track-helpers.c  track-helpers.h  track.c
src/pages/audiobooks/: audiobook-view.c  audiobook-view.h  genre-button.c  genre-button.h  genres-banner.c  genres-banner.h  library.c  library.h  writer-page.c  writer-page.h
src/pages/music/: album-view.c  album-view.h  artist-view.c  artist-view.h  disc-view.c  disc-view.h  music-local.c  music-local.h
src/pages/playlist/: list.c  list.h
src/playback/: engine.c  engine.h  media-keys.c  media-keys.h  mimes.c  mimes.h  mpris.c  mpris.h
src/playlist/: add-remove-track-popover.c  add-remove-track-popover.h  create-dialog.c  create-dialog.h  create-modify-dialog.c  create-modify-dialog.h  current.c  current.h  playlist.c  playlist.h
theme/: _button.scss  _disc-view.scss  _expander.scss  _main.scss  _player-bar.scss  _primary-nav.scss  _track-item.scss  _vars.scss  koto-builtin-dark.scss  koto-builtin-gruvbox.scss  koto-builtin-light.scss  main.scss  meson.build
theme/components/: _album-info.scss  _audiobook-view.scss  _badge.scss  _cover-art-button.scss  _gtk-overrides.scss  _track-list.scss  _track-table.scss  _writer-page.scss
theme/pages/: _artist-view.scss  _audiobook-library.scss  _music-local.scss  _playlist-page.scss
theme/variants/dark/: _cover-art-button.scss  _disc-view.scss  _main.scss  _music-local.scss  _player-bar.scss  _playlist-page.scss  _vars.scss
theme/variants/gruvbox/: _vars.scss
theme/variants/light/: _vars.scss
